[package]
name                    = "sham"
version                 = "0.2.1"
description             = "Mock implementations for use in testing"
categories              = ["development-tools::testing"]
keywords                = ["mock", "mocking", "testing", "development", "tools"]
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
documentation.workspace = true
repository.workspace    = true
readme                  = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#================================[  FEATURES  ]=================================

[features]
default     = []
full        = ["reqwest", "std_process"]
reqwest     = ["dep:bytes", "dep:futures-util", "dep:mockall", "dep:reqwest", "dep:serde", "dep:serde_json"]
std_process = ["dep:mockall"]

#==============================[  DEPENDENCIES  ]===============================

[dependencies]
bytes              = { optional = true, version = "1.10.1" }
futures-util       = { optional = true, version = "0.3.31" }
mockall            = { optional = true, version = "0.13.1" }
reqwest            = { optional = true, version = "0.12.19", features = ["json", "stream"] }
serde              = { optional = true, version = "1.0.219", features = ["derive"] }
serde_json         = { optional = true, version = "1.0.140", features = ["preserve_order"] }

#=================================[  LINTS  ]===================================

[lints]
workspace = true
